🐛 FIX: Transition lag on firefox

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -81,6 +81,7 @@
 				left: 0;
 				background-color: inherit;
 				border-radius: 50%;
+				transition: background-color 250ms ease-in-out;
 			}
 
 			&:nth-child(even) {
